[package]
name = "asset_provider"
version = "0.1.0"
edition = "2021"

[features]
default = [ "fs", "http" ]
fs = []
http = [ "dep:reqwest" ]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
reqwest = { version = "0.12.15", optional = true }
thiserror.workspace = true

[dev-dependencies]
futures = "0.3.31"
